samples/_failures_safe/1761077466_6b2b36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4422b6a5.c: In function ‘main’:
./samples/SAFE/__tmp_4422b6a5.c:149:16: error: missing terminating " character
  149 |         printf("%.2f
      |                ^~~~~
./samples/SAFE/__tmp_4422b6a5.c:149:9: error: expected expression at end of input
  149 |         printf("%.2f
      |         ^~~~~~
./samples/SAFE/__tmp_4422b6a5.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4422b6a5.c:149:9: error: expected declaration or statement at end of input
